# InsightLight

./: .gitmodules  CMakeLists.txt
InsightLight/: CMakeLists.txt
cmake/: FindEigen3.cmake
include/: camera.h  defs.h  fileutils.h  integrator.h  objects.cpp  objects.h  ray.h  scene.h  shape.h  trianglemesh.h  vector.h
sceneData/house/: camera.cam  house.simple
sceneData/house/geometry/testarea/: facade.mtl
scenes/: cornell.txt
src/: camera.cpp  defs.h  fileutils.cpp  fileutils.h  integrator.cpp  integrator.h  main.cpp  objects.cpp  scene.cpp  scene.h  trianglemesh.cpp  trianglemesh.h
tests/: openmp.cpp
